# k-matrix-toolkit-v2

./: .containerignore  .gitignore  Containerfile  README.md  compose.yaml  requirements.txt
backend/: Cargo.toml
backend/kmatrix-core/: Cargo.toml
backend/kmatrix-core/src/: lib.rs
backend/kmatrix-core/src/cache/: mod.rs
backend/kmatrix-core/src/model/: enums.rs  kmatrix.rs  metadata.rs  mod.rs
backend/kmatrix-core/src/parser/: mod.rs
backend/kmatrix-core/src/parser/dbc/: mod.rs  parser.rs
backend/kmatrix-core/src/parser/xlsx/: column_map.rs  mod.rs  parser.rs  sheet_detect.rs
backend/kmatrix-core/src/routing/: mod.rs
backend/kmatrix-core/src/search/: mod.rs
backend/kmatrix-core/tests/: integration_test.rs
backend/kmatrix-server/: Cargo.toml
backend/kmatrix-server/src/: main.rs
docs/: 01_functional_spec.md  02_technical_spec.md  03_testing_strategy.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: search.spec.ts
frontend/src/app/: globals.css  layout.tsx  pds-provider.tsx
frontend/src/app/(landing)/: page.tsx
frontend/src/app/search/: layout.tsx  page.tsx
frontend/src/app/search/imports/: page.tsx
frontend/src/components/: ColumnFilter.tsx
frontend/src/lib/: api.ts
old_source/: K_Matrix_Tool_APP.py
old_source/scripts/: build_dmg_mac.sh
scripts/: build_dmg_silicon_mac.sh  build_exe_windows.sh
src/: K_Matrix_Tool_Functions.py  K_Matrix_Tool_Layout.py
