[package]
name = "kmatrix-core"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.26"
can-dbc = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
rayon = "1"
glob = "0.3"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
