[package]
name = "kmatrix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kmatrix-core = { path = "../kmatrix-core" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"
dirs = "5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
chrono = "0.4"
bytes = "1"
